# SpiceQL

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  code.json  environment.yml  mkdocs.yml
.github/workflows/: ci_testing.yml  deploy.yml  nightly.yml
SpiceQL/: aliasMap.json
SpiceQL/db/: apollo15.json  apollo16.json  apollo17.json  base.json  cassini.json  chandrayaan1.json  chandrayaan2.json  clem1.json  clipper.json  dawn.json  galileo.json  hayabusa.json  hayabusa2.json  juno.json  kaguya.json  kplo.json  lo.json  lro.json  mariner10.json  mer1.json  mer2.json  mess.json  mex.json  mgs.json  mro.json  msl.json  near.json  newhorizons.json  odyssey.json  rosetta.json  smart1.json  tgo.json  viking1.json  viking2.json  voyager1.json  voyager2.json
SpiceQL/db/schema/: kernelReport.schema.json  spiceMissionSchmea.schema.json
SpiceQL/include/: alias_map.h  api.h  config.h  database.h  inventory.h  inventoryimpl.h  io.h  memo.h  memoized_functions.h  query.h  spice_types.h  spiceql.h  utils.h  version.h.in
SpiceQL/include/SpiceQL/: api.h  config.h  inventory.h  inventoryimpl.h  io.h  memo.h  memoized_functions.h  query.h  spice_types.h  spiceql.h  spiceql_logging.h  spiceql_version.h.in  utils.h
SpiceQL/src/: alias_map.cpp  api.cpp  config.cpp  database.cpp  inventory.cpp  inventoryimpl.cpp  io.cpp  memoized_functions.cpp  query.cpp  spice_types.cpp  spiceql.cpp  utils.cpp
SpiceQL/tests/: AliasMapTests.cpp  CMakeLists.txt  Fixtures.cpp  Fixtures.h  FunctionalTestsConfig.cpp  FunctionalTestsSpiceQueries.cpp  InventoryTests.cpp  IoTests.cpp  KernelReportSchemaTests.cpp  KernelTests.cpp  MemoTests.cpp  Paths.h  QueryTests.cpp  TestMain.cpp  TestUtilities.cpp  TestUtilities.h  UtilTests.cpp
SpiceQL/tests/data/: aliasMap.test.json  isisKernelList.txt  lrokernels.hdf
bindings/python/: CMakeLists.txt  __init__.py  alias_map.i  api.i  ck_writer.py  config.i  inventory.i  io.i  io.py  memoized_functions.i  pyspiceql.i  query.i  spice_types.i  utils.i
bindings/python/tests/: test_pyspiceql.py
cmake/: FindCSpice.cmake  FindCereal.cmake  FindHiredis.cmake  config.cmake.in  gtest.cmake
docs/: RestAPI.md  conf.py  index.md  spiceql-prod.yml
docs/assets/: extra.css
docs/reference/: tutorials.rst
fastapi/: README.md  environment.yml
fastapi/app/: __init__.py  main.py  models.py  test_api_local.py  test_api_remote.py
fastapi/aws/: aws-stack.yml
fastapi/config/: nginx.conf
recipe/: build.sh  meta.yaml
scripts/: listKernelsInDir.py
scripts/spiceJsonGenerator/: spiceGeneratorDependencies.yml  spiceJsonGenerator.py
submodules/utcet/: utcet.h
tutorials/: visualization.ipynb
